# faker_healthcare_system

./: .gitignore  README.md  pyproject---.toml  pyproject.toml  setup.py
assets/: nucc_taxonomy_231.csv
faker_healthcare_system/: __init__.py  constants.py  dea.py  person_name.py  provider_individual.py  taxonomy_generator.py
tests/: test_dea.py  test_individual_provider.py  test_person_name.py  test_provider_individual.py
